--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,5 @@
-name: bogo_mobile2
+name: bogo_mobile
 description: A new Flutter project.
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# Read more about versioning at semver.org.
-version: 1.0.0+1
-
-environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -19,6 +8,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  scoped_model: ^0.3.0
+  http: ^0.11.3+16
+  carousel_slider: ^0.0.7
 
 dev_dependencies:
   flutter_test:
@@ -37,9 +29,36 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/food.jpg
+    - assets/LoginPage/Background.jpg
+    - assets/LoginPage/Big-Logo.png
+    - assets/LoginPage/facebook.png
+    - assets/LoginPage/google-plus.png
+    - assets/LoginPage/twitter.png
+    - assets/RegistrationPage/main-img.jpg
+    - assets/HomePage/Bell-Icons.png
+    - assets/HomePage/Search-Icons.png
+    - assets/HomePage/Home-Icons.png
+    - assets/HomePage/Coupons-Icons.png 
+    - assets/HomePage/Platinum-Icons.png
+    - assets/HomePage/More-Icons.png
+    - assets/HomePage/Location-Icons.png
+    - assets/HomePage/Resturants-Icons.png
+    - assets/HomePage/Specilas-Icons.png
+    - assets/HomePage/Pizza-Hut.png
+    - assets/HomePage/Chilis.png
+    - assets/HomePage/Starbucks.png
+    - assets/HomePage/previous-icons.png
+    - assets/HomePage/next-icons.png
+    - assets/HomePage/previous-icons-inner.png
+    - assets/HomePage/next-icons-inner.png
+    - assets/HomePage/big-image.png
+    - assets/HomePage/small-image.png
+    
+    
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
