--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   scoped_model: ^0.3.0
-  http: ^0.11.3+16
+  http: ^0.12.0
   carousel_slider: ^0.0.7
 
 dev_dependencies:
