--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   http: ^0.11.3+16
   carousel_slider: ^0.0.7
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
+#dev_dependencies:
+ # flutter_test:
+  #  sdk: flutter
 
 
 # For information on the generic Dart part of this file, see the
