add reg functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/Branches/telegram-icon-for-branches.png
     - assets/Branches/twttier-icon-for-branches.png
     - assets/Branches/background-3-tabs.png
+    - assets/Coupons/logo-bogo-in-coupons.png
 
 
     
