--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ flutter:
     - assets/LoginPage/facebook.png
     - assets/LoginPage/google-plus.png
     - assets/LoginPage/twitter.png
+
+    - assets/LoginPage/username.png
+    - assets/LoginPage/password.png
+
     - assets/RegistrationPage/main-img.jpg
     - assets/HomePage/Bell-Icons.png
     - assets/HomePage/Search-Icons.png
