adding platinum tab in the brand page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,9 @@ flutter:
     - assets/Branches/background-3-tabs.png
     - assets/Coupons/logo-bogo-in-coupons.png
 
+    - assets/PlatinumTicket/facebook-icon-01.png
+    - assets/PlatinumTicket/whattsapp-icon-01.png
+
 
     
     
