--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^0.11.3+16
   carousel_slider: ^0.0.7
   shared_preferences: ^0.4.3
+  snaplist: ^0.1.6
 
 #dev_dependencies:
  # flutter_test:
